--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.8",
     "emoji-picker-react": "^4.14.2",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.4",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
